# workflowarena

./: .gitignore  AGENT_HANDOFF.md  BLOG.md  CODE_WALKTHROUGH.md  DEMO_RECORDING_SCRIPT.md  Dockerfile  PITCH.md  README.md  SUBMISSION.md  adversarial_results.json  adversarial_test.py  baseline_test.py  client.py  demo_script.py  inference.py  mock_apps.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  train_simple_agent.py  train_workflow_arena.ipynb  training_results.json  ui.py  workflows.py
server/: app.py  environment.py
